phase 1.1.0 docs - actualize
features
- addition for sql dialect (multi-eq joins, aliases, keywords)